care/force-app/main/default/objects/CAW_Snapshots__c/CAW_Snapshots__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>CAW Snapshots</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CAW Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>