care/force-app/main/default/objects/CAW_Snapshots__c/fields/CPFS_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>CPFS_Campaign_Name__c</fullName>
    <description>Campaign Name</description>
    <inlineHelpText>Campaign Name</inlineHelpText>
    <label>CPFS_Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>