care/force-app/main/default/objects/CAW_Snapshots__c/fields/CPFS_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>CPFS_Created_Date__c</fullName>
    <description>Created Date</description>
    <inlineHelpText>Created Date</inlineHelpText>
    <label>CPFS_Created Date</label>
    <type>Date</type>
</CustomField>