care/force-app/main/default/objects/CAW_Snapshots__c/fields/CPFS_For_Reporting__c.field-meta.xml
<CustomField>
    <fullName>CPFS_For_Reporting__c</fullName>
    <description>For Reporting</description>
    <inlineHelpText>For Reporting</inlineHelpText>
    <label>CPFS_For Reporting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quotas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>