care/force-app/main/default/objects/CAW_Snapshots__c/fields/CPFS_Opportunities_in_Campaign__c.field-meta.xml
<CustomField>
    <fullName>CPFS_Opportunities_in_Campaign__c</fullName>
    <description>Opportunities in Campaign</description>
    <inlineHelpText>Opportunities in Campaign</inlineHelpText>
    <label>CPFS_Opportunities in Campaign</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>