care/force-app/main/default/objects/CAW_Snapshots__c/fields/CPFS_Value_Opportunities_in_Campaign__c.field-meta.xml
<CustomField>
    <fullName>CPFS_Value_Opportunities_in_Campaign__c</fullName>
    <description>Value Opportunities in Campaign</description>
    <inlineHelpText>Value Opportunities in Campaign</inlineHelpText>
    <label>CPFS_Value Opportunities in Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>