care/force-app/main/default/objects/CAW_Snapshots__c/fields/ROWP_Age__c.field-meta.xml
<CustomField>
    <fullName>ROWP_Age__c</fullName>
    <description>Age</description>
    <inlineHelpText>Age</inlineHelpText>
    <label>ROWP_Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>