care/force-app/main/default/objects/CAW_Snapshots__c/fields/ROWP_Amount__c.field-meta.xml
<CustomField>
    <fullName>ROWP_Amount__c</fullName>
    <description>Amount</description>
    <inlineHelpText>Amount</inlineHelpText>
    <label>ROWP_Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>