care/force-app/main/default/objects/CAW_Snapshots__c/fields/ROWP_Billing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>ROWP_Billing_State_Province__c</fullName>
    <description>Billing State/Province</description>
    <inlineHelpText>Billing State/Province</inlineHelpText>
    <label>ROWP_Billing State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>