care/force-app/main/default/objects/CAW_Snapshots__c/fields/ROWP_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>ROWP_Close_Date__c</fullName>
    <description>Close Date</description>
    <inlineHelpText>Close Date</inlineHelpText>
    <label>ROWP_Close Date</label>
    <type>Date</type>
</CustomField>