care/force-app/main/default/objects/CAW_Snapshots__c/fields/ROWP_Competitor__c.field-meta.xml
<CustomField>
    <fullName>ROWP_Competitor__c</fullName>
    <description>Competitor</description>
    <inlineHelpText>Competitor</inlineHelpText>
    <label>ROWP_Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>