care/force-app/main/default/objects/CAW_Snapshots__c/fields/ROWP_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>ROWP_Effective_Date__c</fullName>
    <description>Effective Date</description>
    <inlineHelpText>Effective Date</inlineHelpText>
    <label>ROWP_Effective Date</label>
    <type>Date</type>
</CustomField>