care/force-app/main/default/objects/CAW_Snapshots__c/fields/ROWP_Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>ROWP_Forecast_Category__c</fullName>
    <description>Forecast Category</description>
    <inlineHelpText>Forecast Category</inlineHelpText>
    <label>ROWP_Forecast Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>