care/force-app/main/default/objects/CAW_Snapshots__c/fields/ROWP_Incumbent__c.field-meta.xml
<CustomField>
    <fullName>ROWP_Incumbent__c</fullName>
    <description>Incumbent</description>
    <inlineHelpText>Incumbent</inlineHelpText>
    <label>ROWP_Incumbent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>