care/force-app/main/default/objects/CAW_Snapshots__c/fields/ROWP_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>ROWP_Opportunity_ID__c</fullName>
    <description>Opportunity ID</description>
    <inlineHelpText>Opportunity ID</inlineHelpText>
    <label>ROWP_Opportunity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>