care/force-app/main/default/objects/CAW_Snapshots__c/fields/ROWP_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>ROWP_Opportunity_Name__c</fullName>
    <description>Opportunity Name</description>
    <inlineHelpText>Opportunity Name</inlineHelpText>
    <label>ROWP_Opportunity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>