care/force-app/main/default/objects/CAW_Snapshots__c/fields/ROWP_Opportunity_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>ROWP_Opportunity_Owner_Name__c</fullName>
    <description>Opportunity Owner Name</description>
    <inlineHelpText>Opportunity Owner Name</inlineHelpText>
    <label>ROWP_Opportunity Owner Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>