care/force-app/main/default/objects/CAW_Snapshots__c/fields/ROWP_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>ROWP_Product_Name__c</fullName>
    <description>Product Name</description>
    <inlineHelpText>Product Name</inlineHelpText>
    <label>ROWP_Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>