care/force-app/main/default/objects/CAW_Snapshots__c/fields/ROWP_Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>ROWP_Sale_Type__c</fullName>
    <description>Sale Type</description>
    <inlineHelpText>Sale Type</inlineHelpText>
    <label>ROWP_Sale Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>