care/force-app/main/default/objects/CAW_Snapshots__c/fields/ROWP_Stage__c.field-meta.xml
<CustomField>
    <fullName>ROWP_Stage__c</fullName>
    <description>Stage</description>
    <inlineHelpText>Stage</inlineHelpText>
    <label>ROWP_Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>