care/force-app/main/default/objects/CAW_Snapshots__c/fields/ROWP_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>ROWP_Total_Price__c</fullName>
    <description>Total Price</description>
    <inlineHelpText>Total Price</inlineHelpText>
    <label>ROWP_Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>