care/force-app/main/default/objects/CAW_Snapshots__c/fields/ROWP_Type__c.field-meta.xml
<CustomField>
    <fullName>ROWP_Type__c</fullName>
    <description>Type</description>
    <inlineHelpText>Type</inlineHelpText>
    <label>ROWP_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>