care/force-app/main/default/objects/CAW_Snapshots__c/fields/RP_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>RP_Account_Name__c</fullName>
    <description>Account Name</description>
    <inlineHelpText>Account Name</inlineHelpText>
    <label>RP_Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>