care/force-app/main/default/objects/CAW_Snapshots__c/fields/RP_Age__c.field-meta.xml
<CustomField>
    <fullName>RP_Age__c</fullName>
    <description>Age</description>
    <inlineHelpText>Age</inlineHelpText>
    <label>RP_Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>