care/force-app/main/default/objects/CAW_Snapshots__c/fields/RP_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>RP_Billing_City__c</fullName>
    <description>Billing City</description>
    <inlineHelpText>Billing City</inlineHelpText>
    <label>RP_Billing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>