care/force-app/main/default/objects/CAW_Snapshots__c/fields/RP_Billing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>RP_Billing_State_Province__c</fullName>
    <description>Billing State/Province</description>
    <inlineHelpText>Billing State/Province</inlineHelpText>
    <label>RP_Billing State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>