care/force-app/main/default/objects/CAW_Snapshots__c/fields/RP_Billing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>RP_Billing_Zip_Postal_Code__c</fullName>
    <description>Billing Zip/Postal Code</description>
    <inlineHelpText>Billing Zip/Postal Code</inlineHelpText>
    <label>RP_Billing Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>