care/force-app/main/default/objects/CAW_Snapshots__c/fields/RP_Eligible_Individuals__c.field-meta.xml
<CustomField>
    <fullName>RP_Eligible_Individuals__c</fullName>
    <description>Eligible Individuals</description>
    <inlineHelpText>Eligible Individuals</inlineHelpText>
    <label>RP_Eligible Individuals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>