care/force-app/main/default/objects/CAW_Snapshots__c/fields/RP_Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>RP_Executive_Sponsor__c</fullName>
    <description>Executive Sponsor</description>
    <inlineHelpText>Executive Sponsor</inlineHelpText>
    <label>RP_Executive Sponsor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>