care/force-app/main/default/objects/CAW_Snapshots__c/fields/RP_Industry__c.field-meta.xml
<CustomField>
    <fullName>RP_Industry__c</fullName>
    <description>Industry</description>
    <inlineHelpText>Industry</inlineHelpText>
    <label>RP_Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>