care/force-app/main/default/objects/CAW_Snapshots__c/fields/RP_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>RP_Launch_Date__c</fullName>
    <description>Launch Date</description>
    <inlineHelpText>Launch Date</inlineHelpText>
    <label>RP_Launch Date</label>
    <type>Date</type>
</CustomField>