care/force-app/main/default/objects/CAW_Snapshots__c/fields/RP_Launch_Date_Fiscal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>RP_Launch_Date_Fiscal_Quarter__c</fullName>
    <description>Launch Date Fiscal Quarter</description>
    <inlineHelpText>Launch Date Fiscal Quarter</inlineHelpText>
    <label>RP_Launch Date Fiscal Quarter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>