care/force-app/main/default/objects/CAW_Snapshots__c/fields/RP_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>RP_Lead_Source__c</fullName>
    <description>Lead Source</description>
    <inlineHelpText>Lead Source</inlineHelpText>
    <label>RP_Lead Source</label>
    <length>75</length>
    <type>Text</type>
</CustomField>