care/force-app/main/default/objects/CAW_Snapshots__c/fields/RP_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>RP_Opportunity_Name__c</fullName>
    <description>Opportunity Name</description>
    <inlineHelpText>Opportunity Name</inlineHelpText>
    <label>RP_Opportunity Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>