care/force-app/main/default/objects/CAW_Snapshots__c/fields/RP_Opportunity_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>RP_Opportunity_Owner_Name__c</fullName>
    <description>RP_Opportunity Owner Name</description>
    <inlineHelpText>RP_Opportunity Owner Name</inlineHelpText>
    <label>RP_Opportunity Owner Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>