care/force-app/main/default/objects/CAW_Snapshots__c/fields/RP_Probability__c.field-meta.xml
<CustomField>
    <fullName>RP_Probability__c</fullName>
    <description>Probability (%)</description>
    <inlineHelpText>Probability (%)</inlineHelpText>
    <label>RP_Probability (%)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>