care/force-app/main/default/objects/CAW_Snapshots__c/fields/RP_RFP_RFI__c.field-meta.xml
<CustomField>
    <fullName>RP_RFP_RFI__c</fullName>
    <description>RFP/RFI?</description>
    <inlineHelpText>RFP/RFI?</inlineHelpText>
    <label>RP_RFP/RFI?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>