care/force-app/main/default/objects/CAW_Snapshots__c/fields/RP_Total_of_Company_Employees__c.field-meta.xml
<CustomField>
    <fullName>RP_Total_of_Company_Employees__c</fullName>
    <description>Total # of Company Employees</description>
    <inlineHelpText>Total # of Company Employees</inlineHelpText>
    <label>RP_Total # of Company Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>